test(order-acceptance): 주문 E2E 테스트 구현